--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     --white-color: #ffffff;
     --dark-color: #283658;
     --text-color: #a3a8bb;
-    --bg-color: #f3f6fc;
+    --bg-color: #fcfcfc;
 }
 
 /* ===== Fonts ===== */
@@ -60,6 +60,7 @@ html{
 }
 body{
     /* margin: var(--header-heigth) 0 0 0; */
+    background-color: var(--bg-color);
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
@@ -88,7 +89,10 @@ img{
 .container{
     max-width: 1024px;
     min-height: calc(100% - 2rem);
-    margin: var(--mb-2) auto;
+    margin: 0 1.5rem;
+}
+.section{
+    padding: 8rem 0 2rem;
 }
 .section-title{
     display: block;
@@ -97,9 +101,19 @@ img{
 }
 
 /*  ===== NAV ===== */
-nav{
-    color: var(--dark-color);
+.header{
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: var(--mb-2) 0;
+    z-index: var(--z-fixed);
+    background-color: var(--bg-color);
+    transition: .3s;
+}
+.nav{
     height: var(--header-heigth);
+    color: var(--dark-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -124,10 +138,82 @@ nav{
     background-color: var(--white-color);
     color: var(--blue-color);
 }
+.nav-toggle{
+    display: none;
+}
+.scroll-header{
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
+}
+
+@media screen and (max-width: 850px){
+    .nav{
+        justify-content: center;
+    }
+    .menu{
+        position: fixed;
+        width: calc(100vw - 6rem);
+        height: 100vh;
+        left: 0;
+        top: 0;
+        transform: translateX(-100%);
+        transition: transform .4s ease-in-out;
+        background-color: var(--dark-color);
+        z-index: var(--z-fixed);
+    }
+    .menu-list{
+        flex-direction: column;
+        align-items: center;
+        padding-top: 5rem;
+        row-gap: 3rem;
+    }
+    .menu-link{
+        color: var(--bg-color);
+    }
+    .nav-toggle{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        font-size: 1.25rem;
+        color: var(--bg-color);
+        background-color: var(--dark-color);
+        width: 3rem;
+        height: 3rem;
+        bottom: 3rem;
+        right: 1.5rem;
+        border-radius: 50%;
+        z-index: var(--z-fixed);
+        cursor: pointer;
+    }
+    .show-menu{
+        transform: translateX(0);
+    }
+}
+
+.scroll-header{
+    box-shadow: 0 1px 4px rgba(0, 0, 0, .1);
+}
+
+.active-link{
+    position: relative;
+    font-weight: var(--font-bold);
+}
+
+.active-link::before{
+    content: "";
+    position: absolute;
+    bottom: -.75rem;
+    left: 45%;
+    width: 5px;
+    height: 5px;
+    background-color: var(--dark-color);
+    border-radius: 50%;
+}
 
 /* ===== Home ===== */
 .home{
     height: calc(100vh - var(--header-heigth));
+    padding-top: 3rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -165,9 +251,6 @@ nav{
 }
 
 /* ===== Fastest Solution ===== */
-.solution{
-    padding-top: var(--mb-4);
-}
 .st{
     text-align: center;
 }
@@ -200,7 +283,6 @@ nav{
 /* ===== Qualified ===== */
 .qualified{
     max-width: 1100px;
-    margin-top: 10rem;
     margin-right: auto;
     margin-left: auto;
     background-color: #fafafa;
@@ -300,8 +382,6 @@ nav{
 .post{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin-top: 5rem;
-    padding-top: 2rem;
     align-items: center;
 }
 .post-title{
@@ -404,7 +484,6 @@ nav{
 .find{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin-top: 8rem;
     align-items: center;
 }
 .find-left{
@@ -499,7 +578,6 @@ nav{
 .gallery{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin-top: 8rem;
     align-items: center;
 }
 .gallery-title{
@@ -587,7 +665,6 @@ nav{
 .doctor{
     text-align: center;
     background-color: rgba(158, 136, 255, 0.1);
-    margin-top: 10rem;
     padding: 3rem;
     border-radius: .5rem;
 }
@@ -606,7 +683,8 @@ nav{
 }
 .doctor-box{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(11rem, 1fr));
+    gap: 1rem;
     justify-items: center;
     margin-top: 3rem;
     margin-bottom: 3rem;
@@ -659,8 +737,6 @@ nav{
 }
 /* ===== Testimonials ===== */
 .testimonial{
-    margin-top: 5rem;
-    padding-top: 2rem;
     text-align: center;
 }
 .testimonial-title{
@@ -702,8 +778,8 @@ nav{
 }
 /* ===== Contact ===== */
 .contact{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     align-items: center;
     background-color: rgba(158, 136, 255, 0.1);
     margin-top: 5rem;
@@ -712,7 +788,6 @@ nav{
 }
 .contact-title{
     display: block;
-    width: 80%;
     color: var(--dark-color);
     font-weight: var(--font-bold);
     font-size: var(--h2-font-size);
@@ -723,11 +798,14 @@ nav{
 .contact-subtitle{
     font-weight: var(--font-medium);
 }
+.contact-right{
+    justify-self: end;
+}
+
 /* ===== Footer ===== */
 .footer{
     display: grid;
     grid-template-columns: 1fr 2fr;
-    margin-top: 5rem;
 }
 .footer-title{
     display: block;
@@ -837,14 +915,18 @@ nav{
         max-width: 90vw;
         margin: 0 .5rem;
     }
-    .menu{
-        display: none;
+    .section{
+        padding: 4rem 0 0;
     }
     .home, .qualified-main, .solution-content, .qualified-left, .post, .find, .gallery, .doctor-box, .footer, .footer-main{
         grid-template-columns: 100%;
     }
     .contact{
         display: block;
+    }
+
+    .header{
+        padding: 0;
     }
 
     .home-title{
@@ -924,6 +1006,9 @@ nav{
     }
 
     /* ===== Find Clinic ===== */
+    .post{
+        padding-top: 5rem;
+    }
     .post-left{
         margin-bottom: 2rem;
     }
@@ -936,9 +1021,12 @@ nav{
     }
     .post-box{
         position: static;
-        transform: translateY(-40%);
+        transform: translateY(-60%);
     }
 
+    .find{
+        transform: translateY(-18%);
+    }
     .find-left{
         margin-bottom: 5rem;
     }
@@ -952,7 +1040,7 @@ nav{
     }
 
     .gallery{
-        margin-top: 5rem;
+        transform: translateY(-22%);
     }
     .gallery-title{
         margin-top: .5rem;
@@ -973,7 +1061,7 @@ nav{
 
     /* ===== Our Doctors ===== */
     .doctor{
-        margin-top: 15rem;
+        margin-top: 2rem;
         padding: 2rem 1rem;
     }
     .doctor-title{
@@ -985,13 +1073,9 @@ nav{
         margin: 0;
     }
     .doctor-box{
-        row-gap: 1rem;
+        grid-template-columns: repeat(2, 1fr);
     }
-    .doctor-card{
-        width: 75%;
-        padding: 2rem;
-    }
-
+  
     /* ===== Contact ===== */
     .contact{
         margin-top: 5rem;
@@ -1005,5 +1089,26 @@ nav{
     .footer-subtitle{
         margin-top: 2rem;
         margin-bottom: .5rem;
+    }
+}
+
+@media screen and (max-width: 475px){
+    .doctor-box{
+        grid-template-columns: 100%;
+    }
+
+    .doctor-card{
+        width: 75%;
+    }
+
+    .copyright{
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 1072px){
+    .container{
+        margin-left: auto;
+        margin-right: auto;
     }
 }
